Organic Update, Predictions, Scripts Some modifications to invalid organic data. Added biological predictions including adding barycentre list to the star system allowing lookups of what bodies belong to a barycentre id. Updates to cottle scripts to work better, still in testing. Commented out debugging log messages, to be removed later.

--- a/DataDefinitions/Properties/OrganicGenusName.resx
+++ b/DataDefinitions/Properties/OrganicGenusName.resx
@@ -120,9 +120,6 @@
   <data name="Aleoids" xml:space="preserve">
     <value>Aleoida</value>
   </data>
-  <data name="Anemone" xml:space="preserve">
-    <value>Anemone</value>
-  </data>
   <data name="AsterPod" xml:space="preserve">
     <value>Aster Pod</value>
   </data>
@@ -242,6 +239,9 @@
   </data>
   <data name="SilicateCrystals" xml:space="preserve">
     <value>Silicate Crystals</value>
+  </data>
+  <data name="Sphere" xml:space="preserve">
+    <value>Anemone</value>
   </data>
   <data name="StolonPod" xml:space="preserve">
     <value>Stolon Pod</value>
